Final commit before the presentation